<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Branding (locked) -->
    <string name="app_name">YT Pro</string>
    <string name="splash_tagline">A fast, native client for YouTube</string>

    <!-- Attribution (locked) -->
    <string name="attribution_developer_label">Developer</string>
    <string name="attribution_developer">Google</string>
    <string name="attribution_credits_label">Credits</string>
    <string name="attribution_credits">AU (Custom Client Wrapper &amp; Optimizations)</string>

    <!-- Bottom navigation -->
    <string name="tab_home">Home</string>
    <string name="tab_shorts">Shorts</string>
    <string name="tab_subscriptions">Subscriptions</string>
    <string name="tab_library">Library</string>

    <!-- Home feed -->
    <string name="search_hint">Search YouTube</string>
    <string name="loading_feed">Loading videos…</string>
    <string name="empty_feed">No videos found</string>
    <string name="error_feed">Couldn’t load videos. Pull to retry.</string>

    <!-- Shorts -->
    <string name="empty_shorts">No Shorts found</string>

    <!-- Watch screen -->
    <string name="action_subscribe">Subscribe</string>
    <string name="action_subscribed">Subscribed</string>
    <string name="action_like">Like</string>
    <string name="action_share">Share</string>
    <string name="related_heading">Up next</string>
    <string name="loading_video">Loading video…</string>
    <string name="error_video">This video can’t be played right now.</string>
    <string name="seek_forward_badge">+10s</string>
    <string name="seek_backward_badge">−10s</string>
    <string name="subscribed_to">Subscribed to %1$s</string>
    <string name="unsubscribed_from">Unsubscribed from %1$s</string>
    <string name="unsubscribe_confirm">Unsubscribe from %1$s?</string>

    <!-- Library / settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_about_heading">About</string>
    <string name="library_liked_heading">Liked videos</string>
    <string name="library_subscriptions_heading">Subscriptions</string>
    <string name="library_empty_liked">Videos you like will show up here.</string>
    <string name="library_empty_subscriptions">Channels you subscribe to will show up here.</string>
    <string name="version_format">Version %1$s</string>
    <string name="action_clear_cache">Clear App Cache</string>
    <string name="action_settings">Settings</string>
    <string name="action_close">Close</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="cache_clear_failed">Some cache files could not be removed</string>

    <!-- Navigation -->
    <string name="press_back_again_to_exit">Press back again to exit</string>

    <!-- Accessibility -->
    <string name="content_description_logo">YT Pro logo</string>
    <string name="content_description_thumbnail">Video thumbnail</string>
    <string name="content_description_avatar">Channel avatar</string>
    <string name="content_description_like">Like this video</string>
    <string name="content_description_share">Share this video</string>
    <string name="content_description_fullscreen">Toggle fullscreen</string>
    <string name="content_description_open_watch">Open in watch screen</string>
</resources>
